# vnoc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_server.bat
Artifacts/: desktop.ini
Client/: VNOC.sln
Message/: BaseMessage.cpp  BaseMessage.h  MSG_ACI.h  MSG_ACL.h  MSG_ACS.h  MSG_ALI.h  MSG_APG.h  MSG_APS.h  MSG_AVC.h  MSG_RCI.h  MSG_RCL.h  MSG_RLI.h  MSG_RPG.h  MSG_RPS.h  MSG_RVC.h  MSG_UNION.h  MessageDef.h  MessageParser.cpp  (+6 more)
NetService/src/: AsioTcpConnection.hpp  AsioTcpServer.cpp  AsioTcpServer.hpp  CMakeLists.txt  Common.h  Config.cpp  Config.hpp  FileUserStorage.cpp  FileUserStorage.h  GlobalDefinition.h  NetService.cpp  NetService.h  RclMessageHandler.hpp  RecMessageHandler.hpp  RliMessageHandler.hpp  RoolPool.cpp  Room.cpp  Room.h  RoomFactory.h  RoomManager.cpp  RoomManager.h  RoomPool.cpp  RoomPool.h  RvcMessageHandler.hpp  SQLUserStorage.cpp  SQLUserStorage.h  SocketHandler.hpp  SocketServer.hpp  Student.cpp  Student.h  UserInfo.hpp  UserManage.cpp  UserManage.hpp  UserStorage.cpp  UserStorage.h  UserStorage.hpp  VNOCServer.cpp  VNOCUser.cpp  VNOCUser.h  VnocMessageHandler.hpp  (+9 more)
NetService/src/message/: MessageParser.cpp  MsgDef.cpp  MsgDef.h  PackMessage.cpp
NetService/src/mysql/: CMakeLists.txt  MWSQL_Example.cpp  MysqlWrapper.cpp  MysqlWrapper.h
NetService/src/test/: EchoTestHandler.hpp  EchoTestHandlerTest.cpp  MockTcpConnection.hpp  RoomPoolTest.cpp  VnocMessageHandlerTest.cpp  build-test.sh  testRunner.cpp  testUserManage.cpp
NetService/src/test/testRunner/: testRunner.vcxproj  testRunner.vcxproj.filters  userinfo
(+787 files in other folders)
